unpackaged/objects/Personnel_Info__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>社員氏名</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>人事関連情報</relationshipLabel>
        <relationshipName>Kenshin_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kenshin_Notes__c</fullName>
        <label>健診備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kenshin_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受診済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Dept__c</fullName>
        <label>異動先</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Title__c</fullName>
        <label>新役職</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCD__c</fullName>
        <formula>Employee_Name__r.Cd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>地区</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Dept__c</fullName>
        <label>異動元</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Title__c</fullName>
        <label>旧役職</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contents__c</fullName>
        <label>研修内容</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <label>研修名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Region__c</fullName>
        <formula>TEXT(Employee_Name__r.KinmuArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務地区</label>
        <type>Text</type>
    </fields>
    <label>人事関連情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Place__c</columns>
        <columns>Kenshin_Status__c</columns>
        <columns>Training_Course__c</columns>
        <columns>Previous_Dept__c</columns>
        <columns>New_Dept__c</columns>
        <columns>Previous_Title__c</columns>
        <columns>New_Title__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
        <label>人事情報番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Kenshin_Type</fullName>
        <active>true</active>
        <label>健診</label>
    </recordTypes>
    <recordTypes>
        <fullName>Move_Type</fullName>
        <active>true</active>
        <label>異動</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promotion_Type</fullName>
        <active>true</active>
        <label>昇進</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Type</fullName>
        <active>true</active>
        <label>営業ローラー</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Type</fullName>
        <active>true</active>
        <label>研修</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>